Add server to load twitch user data from twitch API

--- a/src/client/index.styl
+++ b/src/client/index.styl
@@ -23,6 +23,10 @@
                 min-height: 300px;
             }
 
+            img {
+                max-width: 100%;
+            }
+
             .username {
                 position: absolute;
                 width: 100%;
